@@ -1,1 +1,0 @@
-gnote-*.tar.xz
